[tool.poetry]
name = "webcounter"
version = "0.1.0"
description = ""
authors = ["Matti Luukkainen <mluukkai@iki.fi>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = ">=3.1.2,<4.0.0"
robotframework = ">=7.3.2,<8.0.0"
robotframework-seleniumlibrary = ">=6.8.0,<7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
